--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,14 @@ margin-right: 76px;
 .header-link:focus{
     color: #4D5AE5;
     }
-.header-list {
+
+    .header-list{
+        display: none;
+    }
+    .header-after-list{
+        display: none;
+    }
+/* .header-list {
     display: flex;
     gap: 40px;
     font-family: 'Roboto';
@@ -159,7 +166,7 @@ transition-timing-function: var(--hov-foc-cubic);
 }
 .header-mail:hover{
     color: #404BBF;
-}
+} */
 
 /* --------Hero--------- */
 
@@ -168,24 +175,37 @@ transition-timing-function: var(--hov-foc-cubic);
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)),
-    url(../images/people-office.jpg);
+    url(../images/Dark-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding-top: 112px;
+    padding-bottom: 112px;
 }
+@media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            .hero {
+                background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                        rgba(46, 47, 66, 0.7)),
+                    url(../images/Dark-bg-2x.jpg);
+            }
+        }
 .hero-title {
-font-size: 56px;
-line-height: 1.07;
-text-align: center;
-letter-spacing: 0.02em;
-color: #FFFFFF;
-
-max-width: 553px;
-max-height: 120px;
-margin: 0 auto;
-
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    
+    color: #FFFFFF;
+    margin: 0 auto;
+    max-height: 80px;
+    max-width: 318px;
+    
 }
 
 
@@ -205,7 +225,7 @@ height: 56px;
 padding: 16px 32px;
 display: block;
 margin: 0 auto;
-margin-top: 48px;
+margin-top: 72px;
 border: 1px transparent;
 border-radius: 4px;
 transition-property: background-color;
@@ -1467,113 +1487,7 @@ margin-bottom: 16px;
 
 
 /* -------------Media----------------- */
-@media screen and (min-width:480px){
-    .container{
-    width: 428px;
-    }
-    
-}
 
-@media screen and (min-width:768px){
-    .container{
-    width: 768px;
-    }
-    .team-list{
-        display: flex;
-        gap: 24px;
-        /* width: calc((100%-24px) / 2); */
-        text-align: center;
-        justify-content: center;
-        row-gap: 72px;
-    } 
-    .team{
-        padding-top: 96px;
-        padding-bottom: 104px;
-    }
-    .customers {
-        padding-top: 96px;
-        padding-bottom: 96px;
-        }
-        .customers-item{
-            width: calc((100% - 60px) / 3);
-        }
-        .customers-list{
-            gap: 24px;
-            row-gap: 72px;
-}
-.about-text{
-    display: flex;
-    flex-wrap: wrap;
-    align-items:center
 
-    justify-content: center;
-    row-gap:72px;
-}
 
-}
 
-@media screen and (min-width:1200px){
-    .container{
-    width: 1158px;
-    }
-    .team-list{
-        display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    justify-content: center;
-    margin-top: 72px;
-    gap: 24px;
-        /* width: calc((100%-72px)/4); */
-    }
-    .team {
-        padding-top:120px;
-        padding-bottom: 120px;}
-        .customers {
-            padding-top: 120px;
-            padding-bottom: 120px;
-            }
-            .customers-item{
-                width: calc((100% - 120px) / 6);
-            }
-            .customers-list{
-                gap: 24px;
-            }
-.about-picture{
-width: 264px;
-height: 112px;
-display: flex;
-align-items: center;
-justify-content: center;
-margin-bottom: 8px;
-background-color: #F4F4FD;
-border-radius: 4px;
-        }
-.about-text{
-display: flex;
-gap: 24px;
-text-align: center;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: #2E2F42;
-}
-.about-after-text {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-width: 264px;
-height: 72px;
-}
-.about {
-    padding-bottom: 120px;
-}
-.about-icon {
-    padding-top: 120px;}
-}
