--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,165 @@ margin-right: 76px;
     .header-after-list{
         display: none;
     }
+    .menu-open-icon{
+        stroke: #000000       
+    }
+    .menu-open{
+        width: 32px;
+        height: 22px;
+        padding: 0;
+        background-color: transparent;
+        border: none;
+    }
+    .mob-menu {
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        background-color: #FFFFFF;
+        top: 0;
+        padding-top: 80px;
+        padding-bottom: 40px;
+        z-index: 1;
+    }
+    .mob-menu.is-hidden{
+        opacity: 0;
+visibility:hidden;
+pointer-events: none;
+    }
+    .menu-close {
+        width: 24px;
+        height: 24px;
+        background: #E7E9FC;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        position: absolute;
+        right: 40px;
+        top: 40px;
+        transition-duration: var(--time-animation);
+        transition-property: fill, background-color;
+        transition-timing-function: var(--hov-foc-cubic);
+        cursor: pointer;
+    
+    }
+    .menu-close-icon {width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+    .menu-close-close:hover{
+        background-color: #404BBF;
+        fill: #FFFFFF;
+    }
+    .menu-close:focus{
+        background-color: #404BBF;
+        fill: #FFFFFF;
+    }
+    .mob-menu-list {
+        
+    
+    }
+    .mob-menu-item:not(:last-child){
+margin-bottom: 40px;
+
+    }
+    
+    .mob-menu-item {
+        
+    }
+   
+
+    .mob-menu > .container{
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        justify-content: space-between;
+        overflow: auto;
+    }
+    .mob-menu-link {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.1;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2E2F42;
+    }
+    .mob-menu-link:hover,
+.mob-menu-link:focus{
+    color: #4D5AE5;
+    }
+    .current {
+    }
+    .mob-menu-after-list {
+        padding-top: 150px;
+        display: flex;
+        flex-wrap: wrap;
+      gap: 40px;
+    margin-bottom: 48px;
+    }
+    .mob-menu-mail {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+letter-spacing: 0.02em;
+color: #434455;
+        
+    }
+    .mob-menu-tel {
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 36px;
+        line-height: 1.1;
+text-transform: capitalize;
+    color: #434455;
+       padding-bottom: 40px;
+    }
+    .mob-menu-mail:hover,
+    .mob-menu-tel:hover{
+        color: #404BBF;
+    }
+
+    .mob-menu-mail:focus,
+    .mob-menu-tel:focus{
+        color: #404BBF;
+    }
+    .mob-soc-list {
+        position: absolute;
+        display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 56px;
+    }
+    .mob-soc-item {
+        width: 40px;
+        height: 40px;
+    }
+    .mob-soc-link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        background-color: #4D5AE5;
+        border-radius: 50%; 
+        transition-property: background-color;
+        transition-duration: var(--time-animation);
+        transition-timing-function: var(--hov-foc-cubic);
+    }
+    .mob-soc-icon {
+        fill: #FFFFFF;
+    }
+    .mob-soc-link:hover,
+.mob-soc-link:focus {
+    background-color: #404BBF;
+}
+
 /* .header-list {
     display: flex;
     gap: 40px;
@@ -517,14 +676,24 @@ fill: #4D5AE5;
 /* -----------Footer------------ */
 
 .footer {
-padding-top: 100px;
-padding-bottom: 100px;
+padding-top: 96px;
+padding-bottom: 96px;
 background: #2E2F42;
 }
+.before-social{
+    /* display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center; */
 
+}
+.social{
+    display: flex;
+    flex-wrap: wrap;
+}
 
 .footer-web {
-
+/* padding-left: 155px; */
 font-family: 'Raleway';
 font-style: normal;
 font-weight: 800;
@@ -537,6 +706,7 @@ text-transform: uppercase;
 color: #4D5AE5;
 }
 .footer-studio {
+
 font-family: 'Raleway';
 font-style: normal;
 font-weight: 800;
@@ -549,21 +719,30 @@ text-transform: uppercase;
 color: #F4F4FD;
 }
 .footer-text {
+
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #E7E9FC;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #E7E9FC;
 margin-top: 16px;
 max-width: 264px;
-margin-right: 120px;
+
 }
 
 .footer>.container {
     display: flex;
+    flex-wrap: wrap;
+
+
 /* gap: 120px;  */
 }
 
 .soc-tex {
+
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
@@ -571,7 +750,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #FFFFFF;
-margin-bottom: 16px;
+/* margin-bottom: 16px; */
 }
 .soc-list {
 display: flex;
@@ -631,6 +810,7 @@ background: #31D0AA;
 }
 .subscribe-name {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .subscribe-input {
@@ -662,6 +842,7 @@ color: rgba(255, 255, 255, 0.6);
 }
 .subscribe-button {
 display: flex;
+
 align-items: center;
 justify-content: center;
 font-family: "Roboto";
@@ -689,6 +870,7 @@ margin-left: 16px;
 }
 .modal-button-subscribe {
 display: flex;
+
 position: relative;
 }
 .subscribe-button:focus,
