--- a/css/styles.css
+++ b/css/styles.css
@@ -329,7 +329,9 @@ transition-timing-function: var(--hov-foc-cubic);
 
 /* --------Hero--------- */
 
-
+.hero>.container{
+    width: 480px;
+}
 .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -676,212 +678,143 @@ fill: #4D5AE5;
 /* -----------Footer------------ */
 
 .footer {
-padding-top: 96px;
-padding-bottom: 96px;
-background: #2E2F42;
+    padding-top: 96px;
+    padding-bottom: 96px;
+    background-color: #2E2F42;
 }
-.before-social{
-    /* display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center; */
-
-}
-.social{
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .footer-web {
-/* padding-left: 155px; */
 font-family: 'Raleway';
 font-style: normal;
 font-weight: 800;
 font-size: 18px;
 line-height: 1.16;
-display: flex;
 align-items: center;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4D5AE5;
-}
-.footer-studio {
 
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.16;
-display: flex;
-align-items: center;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #F4F4FD;
+}
+.footer-link {
+    font-family: 'Raleway';
+    font-style: normal;
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 1.16;
+        letter-spacing: 0.03em;
+        color: #F4F4FD;
+        display: block;
+        margin-bottom: 16px;
+        text-align: center;
 }
 .footer-text {
-
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #E7E9FC;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #E7E9FC;
-margin-top: 16px;
-max-width: 264px;
-
-}
-
-.footer>.container {
-    display: flex;
-    flex-wrap: wrap;
-
-
-/* gap: 120px;  */
-}
-
-.soc-tex {
-
 font-family: 'Roboto';
 font-style: normal;
-font-weight: 500;
+font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #FFFFFF;
-/* margin-bottom: 16px; */
+color: #E7E9FC;
+width: 268px;
+height: 72px;
+margin: 0 auto;
+}
+
+.container-footer{
+    display: flex;
+}
+.social{
+    margin-top: 72px;
+    text-align: center;
+    margin-bottom: 72px;
+}
+
+.soc-item-ftr{
+    fill: #FFFFFF;
+}
+.soc-tex {
+    margin-top: 0;
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #FFFFFF;
+        margin-bottom: 16px;
 }
 .soc-list {
-display: flex;
-justify-content: center;
-gap: 16px;
-margin-top: 16px;
+    display: flex;
+        justify-content: center;
+        gap: 16px;
 }
-
 .soc-item {
-width: 40px;
-height: 40px;
-
+    width: 40px;
+    height: 40px;
 }
 .soc-link {
-display: flex;
-align-items: center;
-justify-content: center;
-width: 100%;
-height: 100%;
-background: rgba(255, 255, 255, 0.1);
-border-radius: 50%;
-transition-property: background-color;
-transition-duration: var(--time-animation);
-transition-timing-function: var(--hov-foc-cubic);
-
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms var(--hov-foc-cubic);
+}
+.soc-linkr:hover, .soc-link:focus {
+    background-color: #31D0AA;
 }
 
-.soc-icon {
-fill: #F4F4FD;
-
-}
-.soc-link:hover,
-.soc-link:focus {
-background: #31D0AA;
-}
-
-/* -------------subscribe------------- */
-
-.subscribe-footer {
-    margin-left: 80px;
-}
 .subscribe-titl {
-    margin-bottom: 16px;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    position: relative;
-    
-}
-
-.subscribe-form {
-    display: flex;
-}
-.subscribe-name {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.subscribe-input {
-border: 1px solid rgba(255, 255, 255, 0.3);
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-border-radius: 4px;
-width: 264px;
-height: 40px;
-background-color: transparent;
-padding-left: 16px;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 2;
-color: rgba(255, 255, 255, 0.6);
-}
-.subscribe-input::placeholder {
-font-family: "Roboto";
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 24px;
-color: rgba(255, 255, 255, 0.6);
-}
-.subscribe-input:focus {
-    outline: none;
-    border: 1px solid #4d5ae5;
-}
-.subscribe-button {
-display: flex;
-
-align-items: center;
-justify-content: center;
-font-family: "Roboto";
-font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
-color: #ffffff;
-background-color: #4d5ae5;
-border-radius: 4px;
-border: none;
-width: 165px;
-height: 40px;
-padding: 8px 24px;
-margin-left: 24px;
-transition-property: background-color, box-shadow;
-transition-duration: var(--time-animation);
-transition-timing-function: var(--hov-foc-cubic);
+text-align: center;
+letter-spacing: 0.04em;
+color: #FFFFFF;
+margin-bottom: 16px;
 }
-.icons-subscribe {
-
-right: 0;
-bottom: 0;
-margin-left: 16px;
+.input-mail {
+    width: 100%;
+        height: 40px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        background-color: transparent;
+        outline: none;
+        color: rgba(255, 255, 255, 0.6);
+        margin-bottom: 16px;
 }
-.modal-button-subscribe {
-display: flex;
-
-position: relative;
+.input-mail::placeholder {
+    font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        color: rgba(255, 255, 255, 0.6);
+        padding-left: 16px;
 }
-.subscribe-button:focus,
-.subscribe-button:hover {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 4px;
-    background-color: #404bbf;
-    outline: none;
+.button-sub {
+    width: 165px;
+        height: 40px;
+        margin-left: 23px;
+        padding: 8px 24px;
+        background-color: #4D5AE5;
+        border-radius: 4px;
+        border: none;
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        transition: background-color 250ms var(--hov-foc-cubic);
+        margin: 0 auto;
 }
-
-
+.button-sub:hover,
+.button-sub:focus {
+    background-color: #404BBF;
+}
+.btn-sub {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #FFFFFF;
+}
 /*---------------------backdrop--------------*/
 
 .backdrop{
@@ -899,8 +832,8 @@ left: 50%;
 top: 50%;
 padding-top: 72px;
 padding-bottom: 24px;
-width: 408px;
-min-height: 576px;
+width: 392px;
+min-height: 586px;
 background-color:#FCFCFC;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 
 0px 2px 1px rgba(0, 0, 0, 0.2);
