--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,7 @@ margin-top: 48px;
 /* --------Hero--------- */
 
 .hero>.container{
-    width: 480px;
+    /* width: 480px; */
 }
 .hero {
     background-image: linear-gradient(
@@ -341,7 +341,7 @@ transition-timing-function: var(--hov-foc-cubic);
     gap: 24px; 
 }
 .about-text-item {
-    width: 264px;
+    width: 396px;
 }   
 .about-icon {
     padding-top: 96px;
@@ -374,7 +374,7 @@ transition-timing-function: var(--hov-foc-cubic);
     font-weight: 700;
     font-size: 36px;
     line-height: 1.1;
-text-align: center;
+/* text-align: center; */
     letter-spacing: 0.02em;
     text-transform: capitalize;
 color: #2E2F42;
