--- a/css/tablet.css
+++ b/css/tablet.css
@@ -94,6 +94,9 @@
         .hero-btn {
             margin-top: 40px;
         }
+        .menu-hamburger{
+            display: none;
+        }
     .team-list{
         display: flex;
         gap: 24px;
@@ -125,12 +128,12 @@
     flex-wrap: wrap;
     align-items:center;
 
-    justify-content: center;
+    justify-content: space-between;
     row-gap:72px;
 }
 
 .about-after-text{
-    font-family: 'Roboto';
+font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
@@ -138,9 +141,18 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 }
+.about-text-item {
+    width: 356px;
+}   
+/* .mini-container{
+    width: 582px;
+    display: flex;
+
+} */
 .container-footer {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 /* .footer>.container{
     width: 768px;
@@ -168,6 +180,18 @@ color: #434455;
 .subscribe-titl {
     text-align: start;
 }
+.subscribe-footer>.container-footer{
+    /* width: 768px; */
+    /* display: flex;
+    flex-wrap: nowrap; */
+}
+/* .subscribe-titl{
+    display: flex;
+} */
+/* .subscribe-footer{
+    width: 100%;
+    padding-left: 108px;
+} */
 .subscribe-form {
     display: flex;
     gap: 24px;
