--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,12 @@ margin-right: 76px;
     text-transform: capitalize;
     color:#2E2F42;
 }
+.nav-link-menu{
+    color:#2E2F42;
+}
+.nav-link-menu-new{
+    color: #404BBF;
+}
 .modal-nav-item:not(:last-child) {
     margin-bottom: 40px;
 }
@@ -137,7 +143,8 @@ margin-right: 76px;
 .contact-tel-mail {
     margin-bottom: 40px;
 }
-.nav-tel {
+
+.nav-tel{
     font-weight: 600;
         font-size: 36px;
         line-height: 40px;
@@ -285,12 +292,10 @@ margin-top: 48px;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    
     color: #FFFFFF;
     margin: 0 auto;
     max-height: 80px;
-    max-width: 318px;
-    
+    max-width: 320px;    
 }
 
 
@@ -329,11 +334,16 @@ transition-timing-function: var(--hov-foc-cubic);
     padding-right: 15px;
     margin: 0 auto;
 }
+.zagolovok{
+    display: none;
+}
 .about {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
+    padding-top: 96px;
     padding-bottom: 96px;
+    /* display: flex;
+    justify-content: space-between; */
+    /* margin: 0 auto; */
+    /* padding-bottom: 96px; */
 }
 .about-item {
     display: flex;
@@ -344,7 +354,7 @@ transition-timing-function: var(--hov-foc-cubic);
     width: 396px;
 }   
 .about-icon {
-    padding-top: 96px;
+    /* padding-top: 96px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -620,7 +630,7 @@ fill: #4D5AE5;
         background-color: transparent;
         outline: none;
         color: rgba(255, 255, 255, 0.6);
-        margin-bottom: 16px;
+margin-bottom: 16px;
 }
 .input-mail::placeholder {
     font-size: 12px;
@@ -758,7 +768,6 @@ margin-bottom: 16px;
         background-color: transparent;
         outline: none;
         color: rgba(255, 255, 255, 0.6);
-        margin-bottom: 16px;
 }
 .input-mail::placeholder {
     font-size: 12px;
