--- a/css/styles.css
+++ b/css/styles.css
@@ -818,8 +818,10 @@ left: 50%;
 top: 50%;
 padding-top: 72px;
 padding-bottom: 24px;
-width: 392px;
-min-height: 586px;
+max-width: 392px;
+width: 95%;
+height: 95%;
+max-height: 586px;
 background-color:#FCFCFC;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 
 0px 2px 1px rgba(0, 0, 0, 0.2);
