--- a/css/tablet.css
+++ b/css/tablet.css
@@ -221,7 +221,21 @@ color: #434455;
 }
 .modal{
     max-width: 408px;
-
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    padding-top: 72px;
+    padding-bottom: 24px;
+    max-width: 392px;
+    width: 95%;
+    /* height: 95%;
+    max-height: 586px; */
+    background-color:#FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform var(--time-animation) var(--hov-foc-cubic);
 }
 
 }
