--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,7 @@ position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 24px;
+    /* gap: 24px; */
 }
 .mob-soc-link{
     display: flex;
